<resources>
    <string name="app_name">EzStudies</string>
    <string name="agenda">Agenda</string>
    <string name="homeworks">Homeworks</string>
    <string name="settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="map">Map</string>
    <string name="course_editor">Course editor</string>
    <string name="welcome1"><b>Welcome to EzStudies !</b>\n\nEzStudies is an app made <b>by students, for students</b>. The goal of this app is to ease students’ life.\n\n<b>Swipe to the left to continue !</b></string>
    <string name="welcome2">Setup</string>
    <string name="enter">Enter</string>
    <string name="perm_granted">Permission granted</string>
    <string name="perm_denied">Permission denied</string>
    <string name="search">Search</string>
    <string name="address_not_found">Address not found</string>
    <string name="ok">Ok</string>
    <string name="please_select_location">Please select a location</string>
    <string name="set_home_address">Set your address</string>
    <string name="set_school_address">Set your school\'s address</string>
    <string name="empty">Empty</string>
    <string name="prep_time">Preparation time</string>
    <string name="about">About us</string>
    <string name="about_text">We are students at CY Cergy Paris Université. This app is a project for our Developping Application course.\nOur team (GitHub) :\n<b>@IIyn\n@Malinx95\n@Klbgr</b>\nSource code : <u>https://github.com/Klbgr/EzStudies</u></string>
    <string name="minutes">%1$d minutes</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_input">Invalid input</string>
    <string name="import_mode">Import mode</string>
    <string name="travel_mode">Travel mode</string>
    <string name="travel_time">Travel time</string>
    <string name="minute_hint">minute</string>
    <string name="name_hint">login cyu</string>
    <string name="password_hint">password</string>
    <string name="login_succes">Logged in</string>
    <string name="login_fail_credentials">Wrong credentials</string>
    <string name="login_fail_network">Failed, please retry</string>
    <string name="celcat_success">Imported agenda from Celcat</string>
    <string name="ics_success">Imported agenda from ICS file</string>
    <string name="duration">Tomorrow, you\'ll need to wake up at %1$s (%2$d minutes of travel)</string>
    <string name="finish_setup">Please finish setup first</string>
    <string name="export_success">Saved /Download/</string>
    <string name="connect_celcat">Connect to Celcat</string>
    <string name="connected_as">Connected as %1$s</string>
    <string name="not_connected">Not connected</string>
    <string name="invalid_settings">Invalid settings</string>
    <string name="easter_egg_enjoy">YOU GOT RICK ROLLED</string>
    <string name="connecting">Connecting</string>
    <string name="loading">Loading, please wait...</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="unknown">Unknown</string>
    <string name="auto_alarm">Automatic alarms (BETA)</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="add_homework">Add homework</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="action">Action</string>
    <string name="action_message">What do you want to do ?</string>
    <string name="remove">Remove</string>
    <string name="toggle">Toggle</string>
    <string name="today">Today</string>
    <string name="no_agenda">Nothing for today</string>
    <string name="no_homeworks">No homeworks</string>
    <string name="nothing_tomorrow">Tomorrow, you won\'t have any courses</string>
    <string name="alarm_ringtone">Alarm ringtone</string>
    <string name="reminders">Reminders</string>
    <string name="homework_tomorrow">Homework for tomorrow</string>
    <string name="on_boot">Restored notifications</string>
    <string name="address">address</string>
    <string name="save">Save</string>
    <string name="invalid_homework">Please fill in all text fields</string>
    <string name="update">New update available</string>
    <string name="update_message">Do you want to update ?\n\nVersion : %1$s\nChangelog :\n%2$s</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="later">Later</string>
    <string name="downloading">Downloading</string>
    <string name="source">Long press to get to source code</string>
    <string name="theme">Theme</string>
    <string name="next_course">Next course</string>
    <string name="next_homework">Next homework</string>
    <string name="no_coming_course">No coming courses</string>
    <string name="no_coming_homework">No coming homeworks</string>
    <string name="refresh">Refresh agenda</string>
    <string name="refresh_text">Please refresh agenda</string>
    <string name="feedback">Send feedback / Report a bug</string>
    <string name="version">Version : %1$s</string>
    <string name="force_reset">Do you want to reset the local changes on the agenda ?\nLocal changes will be discarded anyway if there are changes on the online agenda</string>
    <string name="duplicate">Duplicates detected ! Select to delete</string>

    <string-array name="travel_array">
        <item>Driving</item>
        <item>Walking</item>
        <item>Transit</item>
    </string-array>
    <string-array name="agenda_array">
        <item>From Celcat</item>
        <item>From ICS file</item>
    </string-array>
    <string-array name="alarm_array">
        <item>EzStudies1</item>
        <item>EzStudies2</item>
        <item>EzStudies3</item>
    </string-array>
    <string-array name="theme_array">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>